# api/swagger/v1/predictor.swagger.json
@@ -22,7 +22,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/predictorCard"
+              "$ref": "#/definitions/predictorCardResponse"
             }
           }
         },
@@ -32,153 +32,80 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/predictorDate"
+              "$ref": "#/definitions/predictorCardRequest"
             }
           }
         ],
         "tags": [
-          "Predictor"
-        ]
-      }
-    },
-    "/v1/echo": {
-      "post": {
-        "operationId": "GetBaseMatrix",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/predictorMatrix"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/protobufEmpty"
-            }
-          }
-        ],
-        "tags": [
-          "Predictor"
+          "PredictorService"
         ]
       }
     }
   },
   "definitions": {
-    "predictorCard": {
-      "type": "object",
-      "properties": {
-        "number": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "suite": {
-          "type": "string"
-        },
-        "rank": {
-          "type": "string"
-        }
-      }
-    },
-    "predictorDate": {
-      "type": "object",
-      "properties": {
-        "year": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "month": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "day": {
-          "type": "integer",
-          "format": "int64"
-        }
-      }
-    },
-    "predictorMatrix": {
-      "type": "object",
-      "properties": {
-        "m": {
-          "$ref": "#/definitions/protobufListValue"
-        }
-      }
-    },
-    "protobufEmpty": {
-      "type": "object",
-      "description": "service Foo {\n      rpc Bar(google.protobuf.Empty) returns (google.protobuf.Empty);\n    }\n\nThe JSON representation for `Empty` is empty JSON object `{}`.",
-      "title": "A generic empty message that you can re-use to avoid defining duplicated\nempty messages in your APIs. A typical example is to use it as the request\nor the response type of an API method. For instance:"
-    },
-    "protobufListValue": {
-      "type": "object",
-      "properties": {
-        "values": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/protobufValue"
-          },
-          "description": "Repeated field of dynamically typed values."
-        }
-      },
-      "description": "`ListValue` is a wrapper around a repeated field of values.\n\nThe JSON representation for `ListValue` is JSON array."
-    },
-    "protobufNullValue": {
+    "PersonConfigGender": {
       "type": "string",
       "enum": [
-        "NULL_VALUE"
+        "OTHER",
+        "MALE",
+        "FEMALE"
       ],
-      "default": "NULL_VALUE",
-      "description": "`NullValue` is a singleton enumeration to represent the null value for the\n`Value` type union.\n\n The JSON representation for `NullValue` is JSON `null`.\n\n - NULL_VALUE: Null value."
+      "default": "OTHER"
     },
-    "protobufStruct": {
+    "predictorCard": {
+      "type": "object"
+    },
+    "predictorCardRequest": {
       "type": "object",
       "properties": {
-        "fields": {
-          "type": "object",
-          "additionalProperties": {
-            "$ref": "#/definitions/protobufValue"
-          },
-          "description": "Unordered map of dynamically typed values."
+        "api": {
+          "type": "string"
+        },
+        "lang": {
+          "type": "string"
+        },
+        "personConfig": {
+          "$ref": "#/definitions/predictorPersonConfig"
         }
-      },
-      "description": "`Struct` represents a structured data value, consisting of fields\nwhich map to dynamically typed values. In some languages, `Struct`\nmight be supported by a native representation. For example, in\nscripting languages like JS a struct is represented as an\nobject. The details of that representation are described together\nwith the proto support for the language.\n\nThe JSON representation for `Struct` is JSON object."
+      }
     },
-    "protobufValue": {
+    "predictorCardResponse": {
       "type": "object",
       "properties": {
-        "null_value": {
-          "$ref": "#/definitions/protobufNullValue",
-          "description": "Represents a null value."
+        "api": {
+          "type": "string"
         },
-        "number_value": {
-          "type": "number",
-          "format": "double",
-          "description": "Represents a double value."
+        "lang": {
+          "type": "string"
         },
-        "string_value": {
-          "type": "string",
-          "description": "Represents a string value."
-        },
-        "bool_value": {
-          "type": "boolean",
-          "format": "boolean",
-          "description": "Represents a boolean value."
-        },
-        "struct_value": {
-          "$ref": "#/definitions/protobufStruct",
-          "description": "Represents a structured value."
-        },
-        "list_value": {
-          "$ref": "#/definitions/protobufListValue",
-          "description": "Represents a repeated `Value`."
+        "card": {
+          "$ref": "#/definitions/predictorCard"
         }
-      },
-      "description": "`Value` represents a dynamically typed value which can be either\nnull, a number, a string, a boolean, a recursive struct value, or a\nlist of values. A producer of value is expected to set one of that\nvariants, absence of any variant indicates an error.\n\nThe JSON representation for `Value` is JSON value."
+      }
+    },
+    "predictorPersonConfig": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "gender": {
+          "$ref": "#/definitions/PersonConfigGender"
+        },
+        "birthday": {
+          "type": "string"
+        },
+        "features": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "environment": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/predictorPersonConfig"
+          }
+        }
+      }
     }
   }
 }
