# pkg/api/v1/predictor.pb.gw.go
@@ -13,7 +13,6 @@ import (
 	"net/http"
 
 	"github.com/golang/protobuf/proto"
-	"github.com/golang/protobuf/ptypes/empty"
 	"github.com/grpc-ecosystem/grpc-gateway/runtime"
 	"github.com/grpc-ecosystem/grpc-gateway/utilities"
 	"golang.org/x/net/context"
@@ -29,25 +28,8 @@ var _ status.Status
 var _ = runtime.String
 var _ = utilities.NewDoubleArray
 
-func request_Predictor_GetBaseMatrix_0(ctx context.Context, marshaler runtime.Marshaler, client PredictorClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq empty.Empty
-	var metadata runtime.ServerMetadata
-
-	newReader, berr := utilities.IOReaderFactory(req.Body)
-	if berr != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
-	}
-	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
-	}
-
-	msg, err := client.GetBaseMatrix(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
-func request_Predictor_FindCardByBirthday_0(ctx context.Context, marshaler runtime.Marshaler, client PredictorClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq Date
+func request_PredictorService_FindCardByBirthday_0(ctx context.Context, marshaler runtime.Marshaler, client PredictorServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq CardRequest
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -63,9 +45,9 @@ func request_Predictor_FindCardByBirthday_0(ctx context.Context, marshaler runti
 
 }
 
-// RegisterPredictorHandlerFromEndpoint is same as RegisterPredictorHandler but
+// RegisterPredictorServiceHandlerFromEndpoint is same as RegisterPredictorServiceHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
-func RegisterPredictorHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
+func RegisterPredictorServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
 	conn, err := grpc.Dial(endpoint, opts...)
 	if err != nil {
 		return err
@@ -85,23 +67,23 @@ func RegisterPredictorHandlerFromEndpoint(ctx context.Context, mux *runtime.Serv
 		}()
 	}()
 
-	return RegisterPredictorHandler(ctx, mux, conn)
+	return RegisterPredictorServiceHandler(ctx, mux, conn)
 }
 
-// RegisterPredictorHandler registers the http handlers for service Predictor to "mux".
+// RegisterPredictorServiceHandler registers the http handlers for service PredictorService to "mux".
 // The handlers forward requests to the grpc endpoint over "conn".
-func RegisterPredictorHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
-	return RegisterPredictorHandlerClient(ctx, mux, NewPredictorClient(conn))
+func RegisterPredictorServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
+	return RegisterPredictorServiceHandlerClient(ctx, mux, NewPredictorServiceClient(conn))
 }
 
-// RegisterPredictorHandlerClient registers the http handlers for service Predictor
-// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "PredictorClient".
-// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "PredictorClient"
+// RegisterPredictorServiceHandlerClient registers the http handlers for service PredictorService
+// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "PredictorServiceClient".
+// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "PredictorServiceClient"
 // doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
-// "PredictorClient" to call the correct interceptors.
-func RegisterPredictorHandlerClient(ctx context.Context, mux *runtime.ServeMux, client PredictorClient) error {
+// "PredictorServiceClient" to call the correct interceptors.
+func RegisterPredictorServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client PredictorServiceClient) error {
 
-	mux.Handle("POST", pattern_Predictor_GetBaseMatrix_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_PredictorService_FindCardByBirthday_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
@@ -110,34 +92,14 @@ func RegisterPredictorHandlerClient(ctx context.Context, mux *runtime.ServeMux, 
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_Predictor_GetBaseMatrix_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_PredictorService_FindCardByBirthday_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_Predictor_GetBaseMatrix_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
-	mux.Handle("POST", pattern_Predictor_FindCardByBirthday_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateContext(ctx, mux, req)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := request_Predictor_FindCardByBirthday_0(rctx, inboundMarshaler, client, req, pathParams)
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_Predictor_FindCardByBirthday_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_PredictorService_FindCardByBirthday_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -145,13 +107,9 @@ func RegisterPredictorHandlerClient(ctx context.Context, mux *runtime.ServeMux, 
 }
 
 var (
-	pattern_Predictor_GetBaseMatrix_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "echo"}, ""))
-
-	pattern_Predictor_FindCardByBirthday_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "card"}, ""))
+	pattern_PredictorService_FindCardByBirthday_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "card"}, ""))
 )
 
 var (
-	forward_Predictor_GetBaseMatrix_0 = runtime.ForwardResponseMessage
-
-	forward_Predictor_FindCardByBirthday_0 = runtime.ForwardResponseMessage
+	forward_PredictorService_FindCardByBirthday_0 = runtime.ForwardResponseMessage
 )
